--- a/CSS/Projects.css
+++ b/CSS/Projects.css
@@ -64,12 +64,12 @@
   }
 
   .card .back {
-    background-color:#36FBB1;
+    background-color:#1c3664;
     transform: rotateY(180deg);
     justify-content: center;
     list-style: circle;
     padding: 3% 2%;
-    color: black;
+    color:white;
   }
 
   .card ul {
@@ -94,4 +94,12 @@
   .card h2,
   .card p {
     margin: 10px;
+  }
+
+  .plink{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 30%;
+    margin-top: 2%;
   }
